--- a/app/assets/stylesheets/admin/genres.scss
+++ b/app/assets/stylesheets/admin/genres.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the admin::genres controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// 各ジャンル画面の見出し
+.genre {
+  margin-bottom: 80px;
+}
+
+.genre-form {
+  margin: 0 0 20px 20px;
+}
