--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -20,7 +20,7 @@
         <tr>
           <td><%= item.id %></td>
           <td>
-            <%= link_to edit_admin_item_path(item) do %>
+            <%= link_to admin_item_path(item) do %>
               <%= item.name %>
             <% end %>
           </td>
