--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <h1 class="item">商品詳細</h1>
-  
+
   <div class="row">
-    <div class="col-xs-3">
-      <%= attachment_image_tag @item, :image, format: "jpeg", size: "200x200" %>
+    <div class="col-xs-4">
+      <p class="text-right"><%= attachment_image_tag @item, :image, format: "jpeg", size: "200x200" %></p>
     </div>
-    
-    <div class="col-xs-5">
+
+    <div class="col-xs-6">
       <table class="table">
         <tr>
           <td class="col-xs-3">商品名</td>
@@ -29,10 +29,9 @@
           <th><%= @item.is_active == true ? "販売中":"販売停止中" %></th>
         </tr>
       </table>
+      <p class="text-right"><%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-primary item-submit" %></p>
     </div>
-    
-    <div class="col-xs-4 item-edit">
-      <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-primary" %>
-    </div>
+
+    <div class="col-xs-2"></div>
   </div>
 </div>
