--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -16,7 +16,11 @@
           <%= order.created_at %>
         <% end %>
       </td>
-      <td>" order.customer.last_name "" order.customer.first_name "</td>
+      <td>
+        <%= link_to admin_order_path(order) do %>
+          <%= order.customer.last_name %>  <%= order.customer.first_name %>
+        <% end %>
+      </td>
       <td><%= order.postage %></td>
       <td><%= order.status %></td>
     </tr>
