--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -6,7 +6,7 @@
         <td>購入者</td>
         <td>
           <%= link_to admin_end_user_path() do %>
-            "@order.customer.last_name""@order.customer.first_name"
+            <%= @order.customer.last_name %>  <%= @order.customer.first_name %>
           <% end %>
         </td>
       <tr>
@@ -46,7 +46,7 @@
   <tbody>
     <tr>
       <td><%= order.name %></td>
-      <td>" order.order_details.price.to_s(:delimited) "</td></td>
+      <td> order.order_details.price.to_s(:delimited) </td></td>
       <td>" order.order_details.amount "</td></td>
       <td>" order.order_details.making_status "</td>
       <td>
