--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -5,7 +5,7 @@
       <tr>
         <td>購入者</td>
         <td>
-          <%= link_to admin_end_user_path() do %>
+          <%= link_to admin_end_user_path(@order) do %>
             <%= @order.customer.last_name %>  <%= @order.customer.first_name %>
           <% end %>
         </td>
@@ -22,10 +22,9 @@
         <td>支払ステータス</td>
         <td>
           <%= form_with model:@order, url:admin_order_path(@order) ,local: true do |f| %>
-            <%= f.select :status, options_for_select(Order.statuses.keys), {} %>
+            <%= f.select(:status, {入金待ち: '入金待ち', 入金確認: '入金確認', 制作中: '制作中', 発送準備中: '発送準備中', 発送済み: '発送済み'}) %>
             <%= f.submit "更新" %>
           <% end %>
-          <%= @order.status %>
         </td>
       <tr>
            
@@ -42,18 +41,18 @@
       <td>制作ステータス</td>
     </tr>
   </thead>
-  <% @orders.each do |order| %>
+  <% @order_details.each do |order_detail| %>
   <tbody>
     <tr>
-      <td><%= order.name %></td>
-      <td> order.order_details.price.to_s(:delimited) </td></td>
-      <td>" order.order_details.amount "</td></td>
-      <td>" order.order_details.making_status "</td>
+      <td><%= order_detail.order.name %></td>
+      <td><%= order_detail.price.to_s(:delimited) %></td>
+      <td><%= order_detail.amount %></td>
+      <td><%= (order_detail.price * order_detail.amount).to_s(:delimited) %></td>
       <td>
-        <%= form_with model:@order, url:admin_order_path(order) ,local: true do |f| %>
-          <%= f.select :making_status, options_for_select(OrderDetail.making_statuses) %>
-          <%= f.submit "更新" %>
-        <% end %>
+         <%= form_with model:order_detail, url: admin_order_order_detail_path(@order, order_detail), local: true do |f| %>
+           <%= f.select(:making_status, {制作不可: '制作不可', 制作待ち: '制作待ち', 制作中: '制作中', 制作完了: '制作完了'}) %>
+           <%= f.submit "更新" %>
+         <% end %>
       </td>
     </tr>
   </tbody>
@@ -64,7 +63,9 @@
   <tbody>
     <tr>
       <td>商品合計</td>
-      <td>"@order.order_detail.price*@order.order_detail.amount"</td>
+      <td>
+          <%= @sum.to_s(:delimited) %>
+      </td>
     </tr>
     <tr>
       <td>送料</td>
@@ -72,7 +73,7 @@
     </tr>
     <tr>
       <td>請求金額合計</td>
-      <td><%= @order.total_payment.to_s(:delimited) %></td>
+      <td> @sum + @order.shipping_cost.to_s(:delimited) %></td>
     </tr>
   </tbody>
 </table>
