--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -16,11 +16,11 @@
           <% @cart_items.each do |cart_item| %>
           <tr>
             <td><%= attachment_image_tag cart_item.item, :image, :size =>'150x150' %><%= cart_item.item.name %></td>
-            <td class="item-price"><%= addTax(cart_item.item.price,1.1) %></td>
+            <td class="item-price"><%= addTax(cart_item.item.price,@rate) %></td>
             <td>
               <%= cart_item.amount %>
             </td>
-            <td><%= addTax((cart_item.item.price * cart_item.amount),1.1) %></td>
+            <td><%= addTax((cart_item.item.price * cart_item.amount),@rate) %></td>
             <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
           </tr>
           <!--カートの小計と個数と税率をかけたものを初期値0に足す-->
@@ -36,9 +36,13 @@
       <div class="ordered_address">〒<%= @order.postal_code %>  <%= @order.address %></div>
       <p class"ordered_name"><%= @order.name %></p>
       <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
-        <% f.hidden_field :postal_code, :value => @order.postal_code %>
-        <% f.hidden_field :address, :value => @order.address %>
-        <% f.hidden_field :name, :value => @order.name %>
+        <%= f.hidden_field :postal_code, :value => @order.postal_code %>
+        <%= f.hidden_field :address, :value => @order.address %>
+        <%= f.hidden_field :name, :value => @order.name %>
+        <%= f.hidden_field :postage, :value => @order.postage %>
+        <%= f.hidden_field :total_payment, :value => (@sum * @rate).round + @order.postage %>
+        <%= f.hidden_field :payment_method, :value => @order.payment_method %>
+        <%#= f.hidden_field :status, :value => @order.status %>
         <%= f.submit "購入を確定する", class: "btn btn-success" %>
       <% end %>
     </div>
@@ -46,13 +50,13 @@
     <div class="col-lg-4">
       <table border="1">
         <tr>
-          <td>送料</td><td>¥<%= @postage %></td>
+          <td>送料</td><td>¥<%= @order.postage %></td>
         </tr>
         <tr>
-          <td>商品合計</td><td>¥<%= (@sum * 1.1 ).round %>(税込)</td>
+          <td>商品合計</td><td>¥<%= (@sum * @rate ).round %>(税込)</td>
         </tr>
         <tr>
-          <td>請求金額</td><td>¥<%= (@sum * 1.1 ).round + @postage %></td>
+          <td>請求金額</td><td>¥<%= (@sum * @rate ).round + @order.postage %></td>
         </tr>
       </table>
     </div>
