--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,5 +1,5 @@
 <h2>注文履歴一覧</h2>
-  <table>
+  <table border="1">
     <thead>
       <tr>
         <th>注文日</th>
@@ -14,9 +14,10 @@
       <% @orders.each do |order| %>
       <tr>
         <td>
-          <%= order.created_at.strftime("%Y-%m-%d %H:%M") %><
+          <%= order.created_at.strftime("%Y-%m-%d %H:%M") %>
         </td>
-        <td><%= order.item %></td>
+        <td>〒<%= order.postal_code %> <%= order.address %> <%= order.name %></td>
+        <td><%#= order.item %></td>
         <td><%= order.total_payment %></td>
         <td><%= order.status %></td>
         <td><%= link_to "表示する", order_path(order), class: "btn btn-primary" %></td>
