--- a/app/views/public/items/_genre.html.erb
+++ b/app/views/public/items/_genre.html.erb
@@ -8,7 +8,7 @@
     <% genres.each do |genre| %>
       <tr>
         <td>
-          <%= link_to "item_path(genre.item)" do %>
+          <%= link_to genre_path(genre) do %>
             <%= genre.name %>
           <% end %>
         </td>
