--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -18,20 +18,24 @@
               <div class="card-image">
                 <figure class="image">
                   <%= link_to item_path(item) do %>
-                    <%= attachment_image_tag item, :image, :size =>'250x250' %>
+                    <%= attachment_image_tag item, :image, :size =>'230x180' %>
                   <% end %>
                 </figure>
               </div>
               <div class="card-name">
-                <div class="item-name"><%= link_to item.name, item_path(item) %></div>
+                <div class="item-name"><%= link_to item.name, item_path(item), class: "item-link" %></div>
               </div>
               <div class="card-price">
-                <div class="item-price">¥<%= item.price %></div>
+                <div class="item-price">¥<%= item.price.to_s(:delimited) %></div>
               </div>
             </div>
             <% end %>
           </div>
-          <%= link_to 'もっと見る', items_path %>
+          <div class="more">
+            <%= link_to items_path, class: "more-link" do %>
+              もっと見る <i class="far fa-hand-point-right"></i>
+            <% end %>
+          </div>
       </div>
     </div>
   </div>
