--- a/app/views/public/items/_item.html.erb
+++ b/app/views/public/items/_item.html.erb
@@ -5,15 +5,15 @@
         <div class="card-image">
           <figure class="image">
             <%= link_to item_path(item) do %>
-              <%= attachment_image_tag item, :image, :size =>'250x250' %>
+              <%= attachment_image_tag item, :image, :size =>'250x200' %>
             <% end %>
           </figure>
         </div>
         <div class="card-name">
-          <div class="item-name"><%= link_to item.name, item_path(item) %></div>
+          <div class="item-name"><%= link_to item.name, item_path(item), class: "item-link" %></div>
         </div>
         <div class="card-price">
-          <div class="item-price">¥<%= item.price %></div>
+          <div class="item-price">¥<%= item.price.to_s(:delimited) %></div>
         </div>
       </div>
     <% end %>
