--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -7,6 +7,7 @@
       <div class="col-lg-9">
         <h2 class="item-head"><b>商品一覧</b></h2>
         <%= render "item", items: @items %>
+        <%= paginate @items %>
       </div>
     </div>
   </div>
