--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,27 +1,29 @@
 <body>
   <div class="container">
-  <div class="row">
-    <div class="col-lg-3">
-      <%= render "genre", genres: @genres %>
-    </div>
-      <div class="col-lg-9">
-        <div class="col-4">
-          <figure class="image">
-            <div class="item-image"><%= attachment_image_tag @item, :image, :size =>'350x250' %></div>
-          </figure>
-        </div>
-        <div class="col-4">
-          <h2><%= @item.name %></h2>
-          <div class="item-intro"><%= @item.introduction %></div>
-          <h3 class="item-price"><%= addTax(@item.price,1.1) %></h3>
-          <%= form_with model: @cart_item, url: cart_items_path, method: :post, local: true do |f| %>
-            <%= f.select :amount, options_for_select((1..30).to_a), include_blank: "個数選択" %>
-            <%= f.hidden_field :item_id, :value => @item.id %>
-            <%= f.button :type => "submit", class: "btn btn-primary" do %>
-              <i class="fas fa-shopping-cart"></i>
+    <div class="row">
+      <div class="col-lg-3">
+        <%= render "genre", genres: @genres %>
+      </div>
+      <div class="col-lg-9 show-item">
+        <div class="row">
+          <div class="col-lg-6">
+            <figure class="image">
+              <div class="item-image"><%= attachment_image_tag @item, :image, :size =>'350x250' %></div>
+            </figure>
+          </div>
+          <div class="col-lg-6">
+            <h2 class="show-item-name"><%= @item.name %></h2>
+            <div class="item-intro"><%= @item.introduction %></div>
+            <h3 class="item-price"><%= addTax(@item.price,1.1) %></h3>
+            <%= form_with model: @cart_item, url: cart_items_path, method: :post, local: true do |f| %>
+              <%= f.select :amount, options_for_select((1..30).to_a), include_blank: "個数選択" %>
+              <%= f.hidden_field :item_id, :value => @item.id %>
+              <%= f.button :type => "submit", class: "btn btn-primary" do %>
+                <i class="fas fa-shopping-cart"></i>
+              <% end %>
+              <%= link_to "戻る", items_path %>
             <% end %>
-            <%= link_to "戻る", items_path %>
-          <% end %>
+          </div>
         </div>
       </div>
     </div>
