--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,12 +47,25 @@ body {
 // 鈴木追加分
 
 .admin-login-form{
-  
+  display:flex;
+  justify-content:center;
+}
+
+.admin-login-title{
+  padding:30px 0px;
 }
 
 .admin-email-form{
   padding:10px;
+  margin:0 auto;
 }
+
+.admin_login_button{
+  display:flex;
+  justify-content:center;
+  margin:30px;
+}
+
 // 鈴木追加分
 
 // ジャンル検索機能
