--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,18 +1,40 @@
 <h1>配送先登録/一覧</h1>
-<%= form_with model:@address, local:true do |f| %>
-  <%= f.label :"郵便番号(ハイフンなし)" %>
-  <%= f.text_field :postal_code %>
-  <%= f.label :"住所" %>
-  <%= f.text_field :address %>
-  <%= f.label :"宛名" %>
-  <%= f.text_field :name %>
-  <%= f.submit "登録する" %>
-<% end %>
 
-<% @addresses.each do |address| %>
-  <%= address.postal_code %>
-  <%= address.address %>
-  <%= address.name %>
-  <%= link_to "編集する", edit_address_path(address) %>
-  <%= link_to "削除する", address_path(address), method: :delete %>
+
+<table>
+<%= form_with model:@address, local:true do |f| %>
+  <tr>
+    <td><%= f.label :"郵便番号(ハイフンなし)" %></td>
+    <td><%= f.text_field :postal_code %></td>
+  </tr>
+  <tr>
+    <td><%= f.label :"住所" %></td>
+    <td><%= f.text_field :address %></td>
+  </tr>
+  <tr>
+    <td><%= f.label :"宛名" %></td>
+    <td><%= f.text_field :name %></td>
+  </tr>
+  <tr>
+    <td><%= f.submit "登録する" %></td>
+  </tr>
 <% end %>
+</table>
+
+<table>
+  <tr>
+    <td>郵便番号</td>
+    <td>住所</td>
+    <td>宛名</td>
+    <td></td>
+  </tr>
+  <tr>
+  <% @addresses.each do |address| %>
+    <td><%= address.postal_code %></td>
+    <td><%= address.address %></td>
+    <td><%= address.name %></td>
+    <td><%= link_to "編集する", edit_address_path(address) %></td>
+    <td><%= link_to "削除する", address_path(address), method: :delete %></td>
+  <% end %>
+  </tr>
+</table>
