--- a/app/views/public/end_users/edit.html.erb
+++ b/app/views/public/end_users/edit.html.erb
@@ -1,2 +1,41 @@
-<h1>Public::EndUsers#edit</h1>
-<p>Find me in app/views/public/end_users/edit.html.erb</p>
+<div class="row">
+  <h3>登録情報編集</h3>
+  <%= form_with model: @customer, url: edit_customer_password_path(current_customer), method: :patch, local: true do |f| %>
+    <%= render "public/shared/error_messages", resource: current_customer %>
+
+    <div class="form-group">
+      <label>名前   </label>
+        <%= f.label :last_name, "（姓）" %>
+          <%= f.text_field :last_name %>
+        <%= f.label :first_name, "（名）" %>
+          <%= f.text_field :first_name %>
+    </div>
+    <div class="form-group">
+        <label>フリガナ　　　</label>
+          <%= f.label :last_name_kana, "セイ" %>
+            <%= f.text_field :last_name_kana %>
+          <%= f.label :first_name_kana, "カナ" %>
+            <%= f.text_field :first_name_kana %>
+    </div>
+    <div class="field">
+        <%= f.label :email, "メールアドレス" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
+          <%= f.text_field :postal_code %>
+      </div>
+      <div class="form-group">
+        <%= f.label :address, "住所" %>
+          <%= f.text_field :address %>
+      </div>
+      <div class="form-group">
+        <%= f.label :telphone_number, "電話番号（ハイフンなし）" %>
+          <%= f.text_field :telphone_number %>
+      </div>
+      <div class="actions">
+        <%= f.submit "編集内容を保存する", class: "btn btn-primary" %>
+      </div>
+  <% end %>
+  <%= link_to '退会する', end_users_unsubscribe_path, class: "btn btn-danger" %>
+</div>
