--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,24 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 1000px;
+  position: relative;
+}
+
+.wrapper{
+  min-height: 100vh;
+  position: relative;
+  padding-bottom: 120px;
+  box-sizing: border-box;
+}
+
 .item-lists {
   margin: auto;
   display: flex;
@@ -192,6 +210,14 @@ table td {
 }
 
 // ヘッダー
+header {
+  background-color: #FFFFCC;
+  position: absolute;
+  top: 0;
+  background-position: center top;
+  background-size: contain;
+}
+
 .header-name {
   font-size: 30px;
   font-family: impact;
@@ -223,4 +249,21 @@ table td {
 
 .search-form {
   margin-right: 50px;
+}
+
+// フッター
+footer {
+  width: 100%;
+  height: 120px;
+  text-align: center;
+  padding: 50px 0;
+  background-color: #FFFFCC;
+  background-position: center bottom;
+  background-size: contain;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer-text {
+  color: #0066FF;
 }
