--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
     <%= favicon_link_tag('favicon.ico') %>
   </head>
   <body>
-    <%= render "layouts/header" %>
-    <div class="container">
-      <%= yield %>
+    <div class="wrapper">
+      <div class="container">
+        <%= render "layouts/header" %>
+        <%= yield %>
+        <%= render "layouts/footer" %>  
+      </div>
     </div>
-    <%= render "layouts/footer" %>
   </body>
 </html>
