--- a/app/views/public/items/_item.html.erb
+++ b/app/views/public/items/_item.html.erb
@@ -4,7 +4,7 @@
       <%# if item.genre.is_active == true && item.is_active == true %>
       <div class="col-2 ">
         <div class="card-image">
-          <figure class="indeximage">
+          <figure class="index-image">
             <%= link_to item_path(item) do %>
               <%= attachment_image_tag item, :image, :size =>'250x200' %>
             <% end %>
